# keepsecret

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  Messages.sh  README.md  REUSE.toml  org.kde.keepsecret.desktop  org.kde.keepsecret.json  org.kde.keepsecret.metainfo.xml  org.kde.kwallets.desktop  org.kde.kwallets.json
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle  version.gradle.in
doc/: CMakeLists.txt
doc/keepsecret/: CMakeLists.txt  index.docbook
po/ar/: keepsecret.po
po/ca/: keepsecret.po
po/ca/docs/keepsecret/keepsecret/: index.docbook
po/ca@valencia/: keepsecret.po
po/cs/: keepsecret.po
po/de/: keepsecret.po
po/es/: keepsecret.po
po/es/docs/keepsecret/: index.docbook
po/eu/: keepsecret.po
po/fi/: keepsecret.po
po/fr/: keepsecret.po
po/ga/: keepsecret.po
po/he/: keepsecret.po
po/ia/: keepsecret.po
po/it/: keepsecret.po
po/ka/: keepsecret.po
po/ko/: keepsecret.po
po/lt/: keepsecret.po
po/nl/: keepsecret.po
po/nl/docs/keepsecret/: index.docbook
po/pl/: keepsecret.po
po/pt_BR/: keepsecret.po
po/ro/: keepsecret.po
po/ru/: keepsecret.po
po/sk/: keepsecret.po
po/sl/: keepsecret.po
po/sv/: keepsecret.po
po/tr/: keepsecret.po
po/ug/: keepsecret.po
po/uk/: keepsecret.po
po/uk/docs/keepsecret/: index.docbook
po/uk/docs/keepsecret/keepsecret/: index.docbook
po/zh_CN/: keepsecret.po
po/zh_TW/: keepsecret.po
src/: CMakeLists.txt  app.cpp  app.h  collectionmodel.cpp  collectionmodel.h  collectionsmodel.cpp  collectionsmodel.h  importexportmanager.cpp  importexportmanager.h  itemsmodel.cpp  itemsmodel.h  keepsecretconfig.kcfgc  kwalletsconfig.kcfg  kwalletsconfig.kcfgc  main.cpp  resources.qrc  secretitemproxy.cpp  secretitemproxy.h  secretoperationtracker.h  secretserviceclient.cpp  secretserviceclient.h  statetracker.cpp  statetracker.h  walletmodel.cpp  walletmodel.h  walletsmodel.cpp  walletsmodel.h
src/contents/ui/: About.qml  CollectionContentsPage.qml  CollectionListPage.qml  EntryPage.qml  Main.qml  MapField.qml  ResizeHandle.qml  WalletContentsPage.qml  WalletListPage.qml
src/qml/: Actions.qml  CollectionContentsPage.qml  CollectionListPage.qml  EntryPage.qml  FormItem.qml  Main.qml  MapField.qml
